--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
    <h1>Welcome JavaScript</h1>
-  <script src="app.js"></script>
+  <!-- <script src="app.js"></script> -->
   <script src="app_module_3.js"></script>
   
 </body>
