--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
    <h1>Welcome JavaScript</h1>
   <!-- <script src="app.js"></script> -->
-  <script src="app_module_3.js"></script>
+  <!-- <script src="app_module_3.js"></script> -->
+  <script src = "appArray_module_3.js"></script>
   
 </body>
 
